--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -14,7 +14,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body class="dark:bg-[#111827]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
